--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,16 @@
-
 {
-    "version":2,
+    "version": 2,
     "builds": [
         {
-            "src":"./index.py",
+            "src": "api/index.py",
             "use": "@vercel/python",
-            "config":{"runtime":"python3.11.5"}
+            "config": { "runtime": "python3.11.5" }
         }
     ],
     "routes": [
         {
-            "src":"/(.*)",
-            "dest":"/"
+            "src": "/(.*)",
+            "dest": "/"
         }
     ]
 }
