--- a/vercel.json
+++ b/vercel.json
@@ -8,9 +8,8 @@
         }
     ],
     "routes": [
-        {
-            "src":"/(.*)",
-            "dest":"/"
-        }
+        { "handle": "filesystem" },
+        { "src": "/api/(.*)", "dest": "/api/index.py" },
+        { "src": "/(.*)", "dest": "/index.html" }
     ]
 }
